# TinyIM

Code/: CMakeLists.txt
Code/Client/ClientCore_TinyIM/ClientCore/: CFileUtil.h  CHttpServer.cpp  CHttpServer.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CServerSess.h  MediumServer.cpp
Code/Client/ClientCore_TinyIM/UnitTest/: CFileUtil_Test.cpp  CMakeLists.txt
Code/Client/ClientCore_TinyIM/include/common/: .Log.h.swp  IUProtocolData.h
Code/Server/ChatServer/: CMakeLists.txt  build32.bat
Code/Server/ChatServer/MediumServer/: CMakeLists.txt  CMediumServer.cpp  CMySqlConnect.cpp  CServerSess.cpp
Code/Server/ChatServer/ServerTest/: CMakeLists.txt  NetServerTest.cpp  ServerTest.h  UserRegisterUnregister_Test.cpp
Code/Server/ChatServer/UnitTest/: CMakeLists.txt  DataBaseCmd_Test.cpp
Code/Server/ChatServer/include/mysql/: CMySqlConnect.h  CMysqlStruct.h
Code/Server/DataBase/: t_add_friend_msg.sql  t_friend_chat_msg.sql  t_friend_relation.sql  t_group.sql  t_group_chat_msg.sql  t_group_relation.sql  t_user.sql  t_user_team.sql
Code/Server/SimpleHttpServer/: CMakeLists.txt  http_examples.cpp  server_http.hpp
Code/include/common/: CommonFunction.h  asio_common.h
Code/msgStruct/: CommonDef.cpp  CommonDef.h  CommonMsg.cpp
Doc/: UpdateLog.md  book.json
Doc/chap1/: 1_1.md  1_2.md  1_3.md  1_4.md
Doc/chap2/: 2_0_Summary.md  2_1_User_Login.md  2_2_User_Logout.md  2_5_Register_User.md  2_6_UnRegister_User.md
Doc/chap3/: 3_0_Summary.md  3_1_Add_Friend.md  3_5_Find_Friend.md
Doc/chap4/: 4_1_Create_Group.md  4_2_Destroy_Group.md  4_3_Add_To_Group.md  4_4_Quit_From_Group.md  4_5_Remove_User_From_Group.md  4_6_Transfer_Owner_To_Other_Users.md  4_7_Add_User_As_Group_Manager.md  4_8_Remove_Group_Manager.md  4_9_Find_Group.md
Doc/chap4/4_3/: 4_3_1.md  4_3_2.md
Doc/chap5/: 5_5_Send_Recall_Msg.md
Doc/chap5/5_1/: 5_1_0_╙├╗º╖ó╦═║═╜╙╩╒╬─▒╛╧√╧ó.md  5_1_1_Send_Text_Msg_To_Server.md  5_1_2_Recv_Text_Msg_From_Server.md
Doc/chap5/5_2/: 5_2_1_Send_Image_Msg_To_Server.md  5_2_2_Recv_Image_Msg_From_Server.md
Doc/chap5/5_3/: 5_3_0_║├╙╤┤░┐┌╢╢╢»╧√╧ó.md  5_3_1_Send_Shake_Windows_Msg_To_Server.md  5_3_2_Recv_Shake_Window_Msg_From_Server.md
Doc/chap5/5_4/: 5_4_1╖ó╦═╘┌╧▀╬─╝■.md  5_4_2╖ó╦═└δ╧▀╬─╝■.md
Doc/chap5/5_5/: 5_5_0_│╖╗╪╧√╧ó╡─╩╒╖ó.md  5_5_1╖ó╦═│╖╗╪╧√╧ó.md  5_5_2_╧∞╙ª│╖╗╪╧√╧ó.md
Doc/chap6/6_1/: 6_1_0╖ó╦═║═╜╙╩╒╚║╬─▒╛╧√╧ó.md  6_1_1_Send_Group_Text_Msg_To_Server.md  6_1_2_Recv_Group_Text_Msg_From_Server.md
Doc/chap6/6_2/: 6_2_1_Send_Group_Image_Msg_To_Server.md  6_2_2_Recv_Group_Image_Msg_From_Server.md
Doc/chap6/6_3/: 6_3_1_Send_File_Req_Server.md  6_3_2_Send_File_Data_To_Server.md
Doc/chap6/6_4/: 6_4_1_Send_Group_Recall_Msg.md
Doc/chap6/6_5/: 6_5_1_Send_Group_At_User.md  6_5_2_Recv_Group_At_User.md
Doc/chap6/6_6/: 6_6_1_Download_Group_File.md
Doc/chap7/: 7_1_T_USER.md  7_2_T_FRIEND_RELATION.md  7_3_T_FRIEND_CHAT_MSG.md  7_4_T_ADD_FRIEND_MSG.md  7_5_T_USER_TEAM.md  7_6_T_GROUP_RELATION.md  7_7_T_GROUP.md  7_8_T_ADD_INVATE_GROUP_RELATION_MSG.md  7_9_T_GROUP_CHAT_MSG.md
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt
Source/Client/ClientCore/: CClientSess.cpp  CClientSess.h  CFileUtil.cpp  CHttpServer.cpp  CHttpServer.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CMsgDBInterface.cpp  CMsgDBInterface.h  CMsgPersistentUtil.cpp  CMsgPersistentUtil.h  CServerSess.cpp  MediumServer.cpp
Source/Client/ClientTest/: CMakeLists.txt
Source/Client/ClientTest/HTTP_Test/: CMakeLists.txt  Http_Test.cpp
Source/Server/: CMakeLists.txt
Source/Server/ChatServer/: CClientSess.cpp  CClientSess.h  CClientSessManager.cpp  CClientSessManager.h  CDataBaseInterface.cpp  CDataBaseInterface.h  CDataBaseSqlite.cpp  CDataBaseSqlite.h  CDataBaseStruct.h  CMakeLists.txt  CMediumServer.h  CServerSess.cpp  CServerSess.h  CTimeUtil.cpp  ChatServer.cpp  ChatServer.h  EncodingUtil.cpp  EncodingUtil.h  MediumServer.cpp  ServerMain.cpp
Source/Server/ChatServerTest/: CMakeLists.txt  database_sqlite_test.cpp  main.cpp
Source/include/common/: Msg.h
Source/include/msgstruct/: CommonMsg.h
