cmake_minimum_required(VERSION 3.10)
project(chatServerTest)
include_directories(../include/thirdparty/doctest/)
include_directories(../common/)
include_directories(../common/util/)
include_directories(../../../msgStruct/)
include_directories(../../../msgStruct/json11/)
include_directories(../include/thirdparty/mysql/include/)
include_directories(../include/mysql/)
include_directories(../include/common/)
include_directories(../include/thirdparty/)
include_directories(../../../include/thirdparty/mysql/include/)
include_directories(../../../include/thirdparty/doctest/)
link_directories(../include/thirdparty/mysql/lib/)
link_directories(../include/thirdparty/mysql/lib/)
link_libraries(mysqlclient)
SET(NET_SOURCE_FILE  ../../../msgStruct/json11/json11.cpp
                NetServerTest.cpp ../MediumServer/CMySqlConnect.cpp 
../../../msgStruct/CommonDef.cpp)
add_executable(netServerTest ${NET_SOURCE_FILE})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin) 